# linear-regression

./: pyproject.toml
src/linear_regression/: main.py
