[project]
name = "linear-regression"
version = "0.1.0"
description = ""
authors = [
    {name = "howardat",email = "olzhas.nurzhanovich.kakimzhanov@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "linear_regression", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
